fixed word spacing

--- a/public/css/basic.css
+++ b/public/css/basic.css
@@ -1,7 +1,7 @@
 body {
   padding-top: 0px;
   padding-bottom: 40px;
-  background-color: #eee;
+  background-color: #848484;
 }
 
 p {
@@ -116,7 +116,7 @@ h3 {
   top: 25%;
   width: 100%;
   text-align: center;
-  letter-spacing: 30px;
+  letter-spacing: 7.6vw;
 }
 
 .gridForm{
@@ -141,7 +141,7 @@ h3 {
 }
 
 .bigwrapper{
-  background-color: #F2F2F2;
+  background-color: #848484;
   width: 100%;
   height: 100%;
 }
